fix: wrong font family name
should be Raleway not Fira Code

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -63,50 +63,50 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Fira Code';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: local('Fira Code'),
+  src: local('Raleway'),
     url('/assets/fonts/raleway-v26-latin-regular.woff2') format('woff2'),
     url('/assets/fonts/raleway-v26-latin-regular.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Fira Code';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
-  src: local('Fira Code'),
+  src: local('Raleway'),
     url('/assets/fonts/raleway-v26-latin-500.woff2') format('woff2'),
     url('/assets/fonts/raleway-v26-latin-500.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Fira Code';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
-  src: local('Fira Code'),
+  src: local('Raleway'),
     url('/assets/fonts/raleway-v26-latin-600.woff2') format('woff2'),
     url('/assets/fonts/raleway-v26-latin-600.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Fira Code';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
-  src: local('Fira Code'),
+  src: local('Raleway'),
     url('/assets/fonts/raleway-v26-latin-700.woff2') format('woff2'),
     url('/assets/fonts/raleway-v26-latin-700.woff') format('woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Fira Code';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 700;
-  src: local('Fira Code'),
+  src: local('Raleway'),
     url('/assets/fonts/raleway-v26-latin-700italic.woff2') format('woff2'),
     url('/assets/fonts/raleway-v26-latin-700italic.woff') format('woff');
   font-display: swap;
